[project]
name = "zm06"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "haru996-k", email = "haru.k0414@docomo.ne.jp" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
zm06 = "zm06:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
