[project]
name = "zm06"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "haru996-k", email = "haru.k0414@docomo.ne.jp" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.16.0",
    "requests",
    "beautifulsoup4"
    ]

[project.scripts]
zm06 = "zm06.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
